# ChocolateDescent

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ChocolateDescent.sln  ChocolateDescent.vcxproj  ChocolateDescent.vcxproj.filters  building.txt  copying.txt  credits.txt  platform_notes.txt  readme.md  todo.md  todo.txt  vcpkg.json
2d/: 2d.vcxproj  2d.vcxproj.filters  CMakeLists.txt  bitblt.c  bitblt.cpp  bitmap.c  bitmap.cpp  box.c  box.cpp  canvas.c  canvas.cpp  circle.c  circle.cpp  clip.h  disc.c  disc.cpp  effect2d.c  effect2d.cpp  effect2d.h  effects.c  font.c  font.cpp  font_d2.cpp  gpixel.c  gpixel.cpp  gr.c  gr.cpp  gr.h  gr_sdl.c  gr_sdl.cpp  grdef.h  i_gr.h  ibitblt.c  ibitblt.cpp  ibitblt.h  lbitblt.c  lbitblt.cpp  line.c  line.cpp  palette.c  (+25 more)
3d/: 3d.h  3d.vcxproj  3d.vcxproj.filters  CMakeLists.txt  clipper.c  clipper.cpp  clipper.h  draw.c  draw.cpp  globvars.c  globvars.cpp  globvars.h  horizon.c  horizon.cpp  instance.c  instance.cpp  interp.c  interp.cpp  matrix.c  matrix.cpp  points.c  points.cpp  rod.c  rod.cpp  setup.c  setup.cpp
Main/: Main.vcxproj  ai.c  ai.h  aipath.c  aistruct.c  aistruct.h  arcade.h  args.c  automap.c  automap.h  bm.c  cntrlcen.c  collide.c  collide.h  compbit.h  controls.c  credits.c  credits.h  desc_id.h  descent.cfg  digi.c  digi.h  effects.c  effects.h  endlevel.h  fireball.c  fuelcen.c  fvi.c  game.c  game.h  gamefont.c  gamefont.h  gamemine.c  gamemine.h  gamesave.c  gamesave.h  gameseg.c  gameseq.h  gauges.c  gauges.h  (+51 more)
bios/: bios.vcxproj  bios.vcxproj.filters  disk.c  disk.cpp  disk.h  findfile.c  findfile.cpp  findfile.h  i_sound.c  joy.c  joy.h  key.c  key.cpp  key.h  mono.c  mono.cpp  mono.h  mouse.c  mouse.h  timer.c  timer.cpp  timer.h
cfile/: CMakeLists.txt  cfile.c  cfile.cpp  cfile.h  cfile.vcxproj  cfile.vcxproj.filters
cfiletest/: cfiletest.cpp  cfiletest.vcxproj  cfiletest.vcxproj.filters
cmake/: FindFLUIDSYNTH.cmake  FindFluidsynth.cmake  FindOPENAL.cmake  FindOpenAL.cmake  FindSDL2.cmake
fix/: CMakeLists.txt  fix.c  fix.cpp  fix.h  fix.vcxproj  fix.vcxproj.filters  tables.c  tables.cpp
gr_test/: gr_test.c  gr_test.vcxproj  gr_test.vcxproj.filters
gr_test_win/: Resource.h  gr_test.c  gr_test_win.cpp  gr_test_win.rc  gr_test_win.vcxproj  gr_test_win.vcxproj.filters
iff/: CMakeLists.txt  iff.c  iff.cpp  iff.h  iff.vcxproj  iff.vcxproj.filters
main_d1/: CMakeLists.txt  ai.c  ai.cpp  ai.h  aipath.c  aipath.cpp  aistruct.c  aistruct.cpp  aistruct.h  arcade.h  args.cpp  args.h  automap.c  automap.cpp  automap.h  bm.c  bm.cpp  bm.h  bmread.c  bmread.cpp  cntrlcen.cpp  cntrlcen.h  collide.c  collide.cpp  collide.h  compbit.h  config.c  config.cpp  config.h  controls.c  controls.cpp  controls.h  credits.c  credits.cpp  credits.h  desc_id.h  digi.c  digi.cpp  digi.h  dumpmine.c  (+175 more)
main_d1/editor/: autosave.cpp  centers.cpp  centers.h  curves.cpp  editor.h  eglobal.cpp  ehostage.cpp  ehostage.h  einit.cpp  elight.cpp  eobject.cpp  eswitch.cpp  eswitch.h  fixseg.cpp  func.cpp  group.cpp  info.cpp  kbuild.cpp  kcurve.cpp  kfuncs.cpp  kgame.cpp  khelp.cpp  kmine.cpp  ksegmove.cpp  ksegsel.cpp  ksegsize.cpp  ktmap.cpp  kview.cpp  med.cpp  meddraw.cpp  meddraw.h  medmisc.cpp  medrobot.cpp  medsel.cpp  medwall.cpp  medwall.h  mine.cpp  nocfile.h  objpage.cpp  segment.cpp  (+3 more)
main_d2/: CMakeLists.txt  ai.cpp  ai.h  ai2.cpp  aipath.cpp  aistruct.cpp  aistruct.h  arcade.h  automap.cpp  automap.h  bm.cpp  bm.h  bmread.cpp  bmread.h  cntrlcen.cpp  cntrlcen.h  collide.cpp  collide.h  config.cpp  config.h  controls.cpp  controls.h  credits.cpp  credits.h  crypt.cpp  desc_id.h  digi.cpp  digi.h  digiobj.cpp  dumpmine.cpp  effects.cpp  effects.h  endlevel.cpp  endlevel.h  escort.cpp  fireball.cpp  fireball.h  fuelcen.cpp  fuelcen.h  fvi.cpp  (+108 more)
main_d2/editor/: autosave.cpp  centers.cpp  centers.h  curves.cpp  dcflib.h  editor.h  eglobal.cpp  ehostage.cpp  einit.cpp  elight.cpp  eobject.cpp  eobject.h  eswitch.cpp  eswitch.h  fixseg.cpp  func.h  group.cpp  info.cpp  info.h  kbuild.cpp  kcurve.cpp  kdefs.h  kfuncs.cpp  kfuncs.h  kgame.cpp  khelp.cpp  kmine.cpp  ksegmove.cpp  ksegsel.cpp  ksegsize.cpp  ktmap.cpp  kview.cpp  med.cpp  meddraw.cpp  medmisc.cpp  medmisc.h  medrobot.cpp  medrobot.h  medsel.cpp  medsel.h  (+11 more)
main_shared/: compbit.h  digi.h  effects.cpp  effects.h  game_shared.h  hqmusic.cpp  hqmusic.h  inferno_shared.h  object.h  piggy.h  robot.h  songs.cpp  songs.h  texmerge.cpp  texmerge.h  text.cpp  text.h
mem/: CMakeLists.txt  mem.c  mem.cpp  mem.h  mem.vcxproj  mem.vcxproj.filters
misc/: CMakeLists.txt  args.cpp  args.h  byteswap.c  byteswap.cpp  byteswap.h  error.c  error.cpp  error.h  hash.cpp  misc.vcxproj  misc.vcxproj.filters  parsarg.c  parsarg.cpp  parsarg.h  rand.cpp  rand.h  stb_vorbis.c  stb_vorbis.h  types.h
mve/: CMakeLists.txt  decoder8.cpp  libmve.h  mve_audio.cpp  mve_main.c  mvelib.cpp  mvelib.h  mveplay.cpp
platform/: CMakeLists.txt  disk.h  findfile.cpp  findfile.h  i_midi.h  i_net.h  i_sound.cpp  i_sound.h  joy.cpp  joy.h  key.cpp  key.h  mono.cpp  mono.h  mouse.cpp  mouse.h  platform.h  platform_config.cpp  platform_filesys.cpp  platform_filesys.h  posixstub.h  s_midi.cpp  s_midi.h  s_sequencer.cpp  s_sequencer.h  timer.cpp  timer.h
platform/net/: nullipx.h  (+3 more)
texmap/: CMakeLists.txt  blendtable.h  ntmap.c  ntmap.cpp  ntmap_d2.cpp  ntmapout.h  scanline.c  scanline.cpp  scanline.h  scanline_d2.cpp  texmap.h  texmap.vcxproj  texmap.vcxproj.filters  texmapl.h  tmapflat.c  tmapflat.cpp  tmapflat_d2.cpp  tmapsky.c  tmapsky.cpp
texmap_d2/: scanline.h  texmap.h  texmapl.h
ui/: CMakeLists.txt  barbox.c  barbox.cpp  button.c  button.cpp  checkbox.c  checkbox.cpp  file.c  file.cpp  func.c  func.h  gadget.c  gadget.cpp  icon.c  icon.cpp  inputbox.c  inputbox.cpp  keypad.c  keypad.cpp  keypress.c  keypress.cpp  keytrap.c  keytrap.cpp  listbox.c  listbox.cpp  menu.c  menubar.c  menubar.cpp  message.c  message.cpp  mouse.c  popup.c  popup.cpp  radio.c  radio.cpp  scroll.c  scroll.cpp  ui.c  ui.cpp  ui.h  (+12 more)
vecmat/: CMakeLists.txt  vecmat.c  vecmat.cpp  vecmat.h  vecmat.vcxproj  vecmat.vcxproj.filters
(+35 files in other folders)
